compiler/testData/diagnostics/testsWithJsStdLib/native/rtti/nativeInterfaceClassLiteral.kt
external interface I

fun box() {
    println(<!NATIVE_INTERFACE_AS_CLASS_LITERAL!>I::class<!>)
}